# ineo-collaboration

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-portainer.yaml  docker-compose.yml  main.py  pyproject.toml  sample-config.yml
doc/: README.md
dsqueries/: access.xq  host.xq  link.rq  mediatype.rq  mediatype.xq  name.rq  name.xq  rightsholder.xq  subject.rq
plugins/: cleanup_redis.py  fetch_property.py  generate_ineo_record.py  get_updated_files.py  get_updated_ruc.py  harvest_codemeta.py  harvest_ruc.py  harvest_sdeditor.py  harvest_vlo.py  init_basex.py  plugin_template.py
properties/: informationTypes.json  languages.json  mediaTypes.json  researchActivities.json  researchDomains.json  resourceTypes.json  status.json
queries/: access.rq  access.xq  activities.xq  author.xq  coderepository.rq  date.xq  funding.rq  issuetracker+maintainer.rq  issuetracker+maintainer.xq  issuetracker.xq  maintainer.rq  mediatype.rq  mediatype.xq  name.rq  plangs.rq  plangs.xq  producer.rq  provider.rq  provider.xq  rating.xq  status.rq  test.xq  url.rq  url.xq  version.rq
src/: Dockerfile  FAIRdatasets_tools_harvester  FAIRdatasets_tools_harvester.py  base_query.py  check_table_content.py  comparison.py  dev_script.py  docker-compose.yaml  harvester.py  ineo_get_properties.py  ineo_sync.py  main.py  rating.py  reduce_id.py  regex.py  requirements.txt  step01_harvest.py  template-test.json  template.json  template.py  template_datasets.json  template_tools.json  utils.py
src/HI/: CMDI2INEO.xsl  (+1 more)
templates/: template_datasets.json
utils/: utils.py
(+77 files in other folders)
