[project]
name = "ineo-collaboration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "markdown>=3.10",
    "plain-text-markdown-extention",
    "pyyaml>=6.0.3",
    "requests[socks]>=2.32.5",
]

[tool.uv.sources]
plain-text-markdown-extention = { git = "https://github.com/kostyachum/python-markdown-plain-text.git" }
